--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
+        "jquery": "^3.5.1",
+        "jquery-mask-plugin": "^1.14.16",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
+        "react-confirm-alert": "^2.6.2",
         "react-dom": "^16.13.1",
+        "react-dropzone": "^11.2.0",
         "react-icons": "^3.11.0",
+        "react-notifications": "^1.7.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "styled-components": "^5.2.0"
