--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-notifications": "^1.7.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
+        "react-select": "^3.1.0",
         "styled-components": "^5.2.0"
     },
     "scripts": {
