--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-select": "^3.1.0",
-        "styled-components": "^5.2.0"
+        "styled-components": "^5.2.0",
+        "eslint": "^7.10.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -42,8 +43,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "eslint": "^7.10.0"
     }
 }
