--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
     "name": "web",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "private": true,
     "dependencies": {
+        "@syncfusion/ej2-react-schedule": "^18.3.50",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
+        "cldr-core": "^37.0.0",
+        "cldr-data": "^36.0.0",
+        "immer": "^8.0.0",
         "jquery": "^3.5.1",
         "jquery-mask-plugin": "^1.14.16",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
         "react-confirm-alert": "^2.6.2",
+        "react-dnd": "^11.1.3",
+        "react-dnd-html5-backend": "^11.1.3",
         "react-dom": "^16.13.1",
         "react-dropzone": "^11.2.0",
+        "react-globalize": "^1.0.0",
         "react-icons": "^3.11.0",
         "react-notifications": "^1.7.2",
+        "react-og-forms": "^1.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-select": "^3.1.0",
@@ -42,5 +50,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "systemjs-plugin-json": "^0.3.0"
     }
 }
