--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bootstrap": "^4.5.2",
         "cldr-core": "^37.0.0",
         "cldr-data": "^36.0.0",
+        "firebase": "^8.2.0",
         "immer": "^8.0.0",
         "jquery": "^3.5.1",
         "jquery-mask-plugin": "^1.14.16",
