--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web",
-    "version": "0.2.0",
+    "version": "1.0.0",
     "private": true,
     "dependencies": {
         "@syncfusion/ej2-react-schedule": "^18.3.50",
@@ -25,6 +25,7 @@
         "react-dropzone": "^11.2.0",
         "react-globalize": "^1.0.0",
         "react-icons": "^3.11.0",
+        "react-minimal-pie-chart": "^8.1.0",
         "react-notifications": "^1.7.2",
         "react-og-forms": "^1.1.4",
         "react-router-dom": "^5.2.0",
