--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web",
-    "version": "1.2.2",
+    "version": "1.2.3",
     "private": true,
     "dependencies": {
         "@syncfusion/ej2-react-schedule": "^18.3.50",
@@ -17,12 +17,12 @@
         "immer": "^8.0.0",
         "jquery": "^3.5.1",
         "jquery-mask-plugin": "^1.14.16",
-        "react": "^16.13.1",
+        "react": "^17.0.1",
         "react-bootstrap": "^1.3.0",
         "react-confirm-alert": "^2.6.2",
         "react-dnd": "^11.1.3",
         "react-dnd-html5-backend": "^11.1.3",
-        "react-dom": "^16.13.1",
+        "react-dom": "^17.0.1",
         "react-dropzone": "^11.2.0",
         "react-globalize": "^1.0.0",
         "react-icons": "^3.11.0",
@@ -32,7 +32,9 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-select": "^3.1.0",
-        "styled-components": "^5.2.0"
+        "redux": "^4.0.5",
+        "styled-components": "^5.2.0",
+        "video-react": "^0.14.1"
     },
     "scripts": {
         "start": "react-scripts start",
